Скорректировал line-height

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -5,7 +5,7 @@
 .catalog__title {
   font-family: @main-font;
   font-size: 36px;
-  line-height: 60px;
+  line-height: 1.67;
   font-weight: 400;
   color: @font-color-black;
 }
@@ -36,7 +36,7 @@
 .product-list__title {
   font-family: @main-font;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 1.25;
   text-transform: @text-transform;
   color: @font-color-black;
 }
@@ -44,14 +44,14 @@
 .product-list__table {
   font-family: @additional-font;
   font-size: 12px;
-  line-height: 16px;
+  line-height: 1.35;
   color: @font-color-grey;
 }
 
 .product-list__description {
   font-family: @additional-font;
   font-size: 12px;
-  line-height: 16px;
+  line-height: 1.35;
   color: @font-color-grey;
 }
 
