--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,7 +1,7 @@
 .intro {
   font-family: @main-font;
   font-size: 20px;
-  line-height: 20px;
+  line-height: 1;
 }
 
 .intro__first-screen {
@@ -10,7 +10,7 @@
 
   text-align: @text-align;
 
-  background-color: @font-color-white;
+  background-color: @bg-color-green;
   background-image: @bg-image;
   background-repeat: @bg-repeat;
 
@@ -18,8 +18,9 @@
 }
 
 .intro__title {
+  font-family: @main-font;
   font-size: 36px;
-  line-height: 36px;
+  line-height: 1;
   font-weight: 400;
   color: @font-color-white;
 
@@ -27,8 +28,9 @@
 }
 
 .intro__slogan {
+  font-family: @main-font;
   font-size: 14px;
-  line-height: 14px;
+  line-height: 1;
   text-transform: @text-transform;
   color: @font-color-white;
 
