Обновил line-height в advantages.less

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,7 +1,7 @@
 .advantages__title {
   font-family: @main-font;
   font-size: 36px;
-  line-height: 60px;
+  line-height: 1.67;
   font-weight: 400;
   color: @font-color-black;
 }
@@ -20,6 +20,6 @@
 .advantages__description {
   font-family: @additional-font;
   font-size: 14px;
-  line-height: 18px;
+  line-height: 1.3;
   color: @font-color-grey;
 }
