Обновил line-height в page-header.less

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -8,10 +8,11 @@
 }
 
 .page-header__logo--yellow {
-  fill: #FDC305;
+  fill: #fdc305;
 }
+
 .page-header__logo--red {
-  fill: #F06351;
+  fill: #f06351;
 }
 
 .main-nav__list {
@@ -27,7 +28,7 @@
 
   font-family: @main-font;
   font-size: 20px;
-  line-height: 20px;
+  line-height: 1;
   font-weight: 500;
   text-transform: @text-transform;
   text-align: @text-align;
