Обновил line-height в page-footer.less

--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -10,7 +10,7 @@
 }
 
 .page-footer__logo--black {
-  fill: #111111
+  fill: #111111;
 }
 
 .page-footer__social {
@@ -40,7 +40,7 @@
 .copyright__text {
   font-family: @additional-font;
   font-size: 16px;
-  line-height: 16px;
+  line-height: 1;
   color: @font-color-grey;
 }
 
