изменения в variables.less

--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -11,7 +11,8 @@
 @bg-color-white: #ffffff;
 @bg-color-green: #68b738;
 @bg-color-grey: #f2f2f2;
-@bg-image: url(../../img/index-background-mobile@1x.jpg);
+@bg-image: url("../../img/index-background-mobile@1x.jpg");
+@stock-bg-image: url("../../img/gift-photo-mobile@1x.jpg");
 @bg-repeat: no-repeat;
 
 @border: 1px solid #e6e6e6;
