Обновления в style.less

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,4 +4,7 @@
 @import url("blocks/categories.less");
 @import url("blocks/advantages.less");
 @import url("blocks/page-footer.less");
+@import url("blocks/contacts.less");
 @import url("blocks/catalog.less");
+@import url("blocks/extra.less");
+@import url("blocks/stock.less");
