--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -21,7 +21,7 @@
 .categories__title {
   font-family: @main-font;
   font-size: 24px;
-  line-height: 37px;
+  line-height: 1.55;
   font-weight: 400;
   text-transform: @text-transform;
 
@@ -32,7 +32,7 @@
 .categories__description {
   font-family: @additional-font;
   font-size: 14px;
-  line-height: 18px;
+  line-height: 1.3;
 
   border-bottom: @border;
 
@@ -45,7 +45,7 @@
 .categories__button {
   font-family: @main-font;
   font-size: 16px;
-  line-height: 16px;
+  line-height: 1;
   text-transform: @text-transform;
   text-decoration: @text-decoration;
   color: @font-color-black;
