--- a/source/less/blocks/stock.less
+++ b/source/less/blocks/stock.less
@@ -17,7 +17,7 @@
 }
 
 .stock__txt {
-  font-family: @additional-font;
+  font-family: "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.25;
 
