--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,5 +1,6 @@
 .advantages {
-  max-width: 320px;
+  max-width: 280px;
+  margin: 0 auto;
 }
 
 .advantages__title {
@@ -15,10 +16,22 @@
   padding: 0;
 }
 
+.advantages__item {
+  display: flex;
+  flex-direction: row;
+
+  margin-top: 20px;
+}
+
 .advantages__img {
+  width: 50px;
+  height: 50px;
+
   background-color: @bg-color-green;
 
   padding: 10px;
+
+  margin-right: 20px;
 }
 
 .advantages__description {
@@ -26,4 +39,61 @@
   font-size: 14px;
   line-height: 1.3;
   color: @font-color-grey;
+
+  margin: 0;
+}
+
+@media (min-width: @tablet-width) {
+  .advantages {
+    max-width: 708px;
+
+    margin: 0 auto;
+  }
+
+  .advantages__title {
+    font-size: 60px;
+    line-height: 1;
+  }
+
+  .advantages__list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .advantages__item {
+    flex-direction: column;
+    max-width: 339px;
+
+    margin-right: 30px;
+  }
+
+  .advantages__item:nth-child(2n) {
+    margin-right: 0;
+  }
+
+  .advantages__description {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages {
+    max-width: 1220px;
+  }
+
+  .advantages__item {
+    max-width: 245px;
+
+    margin-right: 80px;
+  }
+
+  .advantages__item:nth-child(2n) {
+    margin-right: 80px;
+  }
+
+  .advantages__item:nth-child(4n) {
+    margin-right: 0;
+  }
 }
