--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -1,10 +1,15 @@
+.categories {
+  max-width: 280px;
+  margin: 0 auto;
+}
+
 .categories__list {
   list-style: @list-style;
   padding: 0;
 }
 
 .categories__item {
-  width: 240px;
+  width: 280px;
   height: 230px;
 
   color: @font-color-black;
@@ -12,8 +17,6 @@
   background-color: @bg-color-grey;
 
   padding-top: 35px;
-  padding-right: 20px;
-  padding-left: 20px;
 
   margin-top: 20px;
 }
@@ -33,6 +36,7 @@
   font-family: @additional-font;
   font-size: 14px;
   line-height: 1.3;
+  color: @font-color-grey;
 
   border-bottom: @border;
 
@@ -49,4 +53,62 @@
   text-transform: @text-transform;
   text-decoration: @text-decoration;
   color: @font-color-black;
+}
+
+@media (min-width: @tablet-width) {
+  .categories {
+    max-width: 708px;
+    margin: 0 auto;
+  }
+
+  .categories__item {
+    width: 653px;
+    height: 291px;
+
+    padding-top: 80px;
+    padding-left: 55px;
+  }
+
+  .categories__title {
+    font-size: 36px;
+    line-height: 1.03;
+  }
+
+  .categories__description {
+    font-size: 16px;
+    line-height: 1.5;
+
+    border-bottom: none;
+  }
+
+  .categories__button {
+    font-size: 20px;
+    line-height: 1;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .categories {
+    max-width: 1220px;
+    margin: 0 auto;
+  }
+
+  .categories__list {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .categories__item {
+    width: 518px;
+    height: 291px;
+
+    padding-top: 81px;
+    padding-left: 52px;
+
+    margin-right: 80px;
+  }
+
+  .categories__item:nth-child(2n) {
+    margin-right: 0;
+  }
 }
