--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,4 @@
+@import url("helpers.less");
 @import url("variables.less");
 @import url("blocks/page-header.less");
 @import url("blocks/intro.less");
