--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,4 @@
+@import url("helpers.less");
 @import url("variables.less");
 @import url("blocks/page-header.less");
 @import url("blocks/intro.less");
@@ -7,6 +8,5 @@
 @import url("blocks/contacts.less");
 @import url("blocks/catalog.less");
 @import url("blocks/extra.less");
-@import url("blocks/stock.less");
 @import url("blocks/program.less");
 @import url("blocks/example.less");
