--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -1,5 +1,6 @@
 .extra {
-  max-width: 320px;
+  max-width: 280px;
+  margin: 0 auto;
 }
 
 .extra__title {
@@ -18,9 +19,7 @@
 }
 
 .additional-list__item {
-  padding-bottom: 24px;
-  padding-left: 0.85;
-
+  padding-bottom: 20px;
   border-bottom: @border;
 }
 
@@ -41,4 +40,139 @@
 
 .additional-list__order-button {
   .mobile-button-green();
+}
+
+.stock {
+  width: 280px;
+  height: 289px;
+
+  text-align: @text-align;
+
+  background-color: @bg-color-green;
+  background-image: url("../../img/gift-photo-mobile@1x.jpg");
+  background-repeat: no-repeat;
+}
+
+.stock__logo {
+  width: 55px;
+  height: 60px;
+
+  fill: #ffffff;
+}
+
+.stock__txt {
+  font-family: @additional-font;
+  font-size: 16px;
+  line-height: 1.25;
+
+  color: @font-color-white;
+}
+
+@media (min-width: @tablet-width) {
+  .extra {
+    max-width: 708px;
+    margin: 0 auto;
+  }
+
+  .extra__title {
+    font-size: 36px;
+    line-height: 1;
+  }
+
+  .additional-list__item {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .additional-list__item:first-child {
+    border-top: @border;
+  }
+
+  .additional-list__title {
+    font-size: 20px;
+    line-height: 1;
+    margin-left: 38px;
+  }
+
+  .additional-list__table {
+    font-size: 16px;
+    line-height: 1.25;
+    margin-right: 37px;
+  }
+
+  .additional-list__order-button {
+    .tablet-button-green();
+    width: 633px;
+    margin-left: 38px;
+    margin-right: 37px;
+  }
+
+  .stock {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 708px;
+    height: 199px;
+  }
+
+  .stock__logo {
+    margin-left: 91px;
+  }
+
+  .stock__txt {
+    width: 160px;
+    text-align: left;
+    margin-right: 125px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .extra {
+    max-width: 1220px;
+    margin: 0 auto;
+    margin-bottom: 86px;
+  }
+
+  .extra__wrapper {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .additional-list {
+    width: 895px;
+    margin: 0;
+    margin-right: 80px;
+  }
+
+  .additional-list__title {
+    margin: 0;
+  }
+
+  .additional-list__order-button {
+    .tablet-button-green();
+    font-size: 16px;
+    line-height: 1.25;
+    margin: 0;
+  }
+
+  .stock {
+    flex-direction: column;
+    justify-content: space-around;
+    width: 245px;
+    height: 289px;
+  }
+
+  .stock__logo {
+    margin: 0 auto;
+  }
+
+  .stock__txt {
+    text-align: center;
+    margin: 0 auto;
+  }
 }
