--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -3,15 +3,24 @@
 }
 
 .catalog__title {
+  height: 60px;
+
   font-family: @main-font;
   font-size: 36px;
   line-height: 1.67;
   font-weight: 400;
   color: @font-color-black;
+
+  padding: 21.5px 20px;
+
+  border-bottom: @border;
+
+  margin: 0;
 }
 
 .catalog__list {
   padding-left: 0;
+  margin: 0;
 }
 
 .product-list {
@@ -19,24 +28,38 @@
 }
 
 .product-list__item {
-  padding-bottom: 24px;
-  padding-left: 20px;
+  position: relative;
+  height: 208px;
+
+  padding: 0 20px;
 
   border-bottom: @border;
 }
 
-.product-list__logo {
-  width: 30px;
+.product-list__img {
+  position: absolute;
+  top: -10px;
+  left: 30px;
+
+  z-index: -1;
 }
 
-.product-list__logo--grey {
-  fill: #d3d3d3;
+.product-list__wrapper {
+  display: flex;
+  flex-direction: column;
+
+  width: 140px;
+  margin-bottom: 20px;
+  margin-left: 160px;
 }
 
 .product-list__title {
+  width: 80px;
+
   font-family: @main-font;
   font-size: 16px;
   line-height: 1.25;
+  font-weight: 400;
   text-transform: @text-transform;
   color: @font-color-black;
 }
@@ -46,6 +69,12 @@
   font-size: 12px;
   line-height: 1.35;
   color: @font-color-grey;
+  border-collapse: collapse;
+}
+
+.product-list__value {
+  text-align: right;
+  padding-right: 20px;
 }
 
 .product-list__description {
@@ -59,8 +88,36 @@
   .mobile-button-green();
 }
 
+.product-list__logo {
+  width: 30px;
+  height: 30px;
+
+  margin-top: 26px;
+  margin-left: 125px;
+}
+
+.product-list__logo--grey {
+  fill: #d3d3d3;
+}
+
+.product-list__item--stock .product-list__title,
+.product-list__item--stock .product-list__description {
+  width: auto;
+  text-align: center;
+}
+
+.product-list__item--stock .product-list__title {
+  margin-top: 25px;
+  margin-bottom: 10px;
+}
+
+.product-list__item--stock .product-list__description {
+  margin: 0;
+}
+
 .product-list__show-all {
   .mobile-button-grey();
+  margin-top: 20px;
 }
 
 @media (min-width: @tablet-width) {
@@ -70,8 +127,15 @@
   }
 
   .catalog__title {
+    height: auto;
+
     font-size: 60px;
     line-height: 1;
+
+    padding: 0;
+
+    border-bottom: none;
+    margin-bottom: 165px;
   }
 
   .product-list {
@@ -106,9 +170,32 @@
     border: @border;
   }
 
+  .product-list__img {
+    top: -47px;
+    left: 0;
+
+    z-index: 1;
+  }
+
+  .product-list__img--big {
+    top: -82px;
+  }
+
+  .product-list__wrapper {
+    width: 249px;
+
+    margin: 0 auto;
+    margin-top: 165px;
+  }
+
   .product-list__title {
+    width: 125px;
     font-size: 20px;
     line-height: 1;
+    text-align: center;
+
+    margin: 0 auto;
+    margin-bottom: 28px;
   }
 
   .product-list__table,
@@ -119,17 +206,52 @@
 
   .product-list__table {
     max-width: 249px;
-    margin: 0 auto;
+  }
+
+  .product-list__field {
+    text-align: left;
+  }
+
+  .product-list__value {
+    padding-right: 0;
+  }
+
+  .product-list__row {
+    height: 31px;
+    border-bottom: 1px solid #cdcdcd;
   }
 
   .product-list__order-button {
     .catalog-button-green();
-    margin-left: 38px;
+    margin: 0 auto;
+    margin-top: 33px;
+  }
+
+  .product-list__logo {
+    width: 60px;
+    height: 60px;
+
+    margin: 0 auto;
+    margin-top: 54px;
+  }
+
+  .product-list__item--stock .product-list__title {
+    width: 135px;
+
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
+
+  .product-list__item--stock .product-list__description {
+    width: 170px;
+
+    margin: 0 auto;
   }
 
   .product-list__show-all {
     .catalog-button-grey();
-    margin-left: 38px;
+    margin: 0 auto;
+    margin-top: 88px;
   }
 }
 
@@ -155,9 +277,24 @@
     width: 243px;
   }
 
+  .product-list__img {
+    top: -45px;
+  }
+
+  .product-list__img--big {
+    top: -65px;
+  }
+
+  .product-list__wrapper {
+    width: 169px;
+  }
+
+  .product-list__title {
+    width: 130px;
+  }
+
   .product-list__table {
     max-width: 169px;
-    margin: 0 auto;
   }
 
   .product-list__order-button {
