--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -11,6 +11,8 @@
 
 .page-footer__logo {
   width: 128px;
+  padding-top: 39px;
+  padding-bottom: 31px;
 }
 
 .page-footer__logo--black {
@@ -30,6 +32,8 @@
 .social {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 
   list-style: @list-style;
 }
@@ -43,8 +47,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 
   max-width: 280px;
+  height: 78px;
 
   margin: 0 auto;
 }
@@ -77,12 +83,25 @@
     margin: 0 auto;
   }
 
+  .page-footer__link {
+    margin: 0;
+  }
+
   .page-footer__social {
     border: none;
   }
 
+  .social__item {
+    margin-right: 29px;
+  }
+
+  .social__item:last-child {
+    margin-right: 0;
+  }
+
   .copyright {
     justify-content: none;
+    margin: 0;
   }
 
   .copyright__text {
