--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -30,15 +30,67 @@
   fill: #f06351;
 }
 
-.main-nav__open {
+.main-nav__button {
+  position: absolute;
+  top: 23px;
+  right: 20px;
   width: 24px;
   height: 18px;
-
+  background-color: @bg-color-white;
   border: none;
+
+  cursor: pointer;
+}
+
+.main-nav--closed .main-nav__button::before {
+  content: "";
+
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  width: 24px;
+  height: 2px;
+
+  background-color: #222222;
+  box-shadow: 0 6px 0 0 #222222, 0 12px 0 0 #222222;
+  cursor: pointer;
+}
+
+.main-nav--closed .site-list {
+  display: none;
+}
+
+.main-nav--opened .main-nav__button::before,
+.main-nav--opened .main-nav__button::after {
+  content: "";
+
+  position: absolute;
+  top: 6px;
+  left: 3px;
+
+  width: 18px;
+  height: 2px;
+
+  background-color: #222222;
+}
+
+.main-nav--opened .main-nav__button::before {
+  transform: rotate(45deg);
+  box-shadow: none;
+}
+
+.main-nav--opened .main-nav__button::after {
+  transform: rotate(-45deg);
+}
+
+.main-nav--opened .site-list {
+  display: block;
 }
 
 .main-nav__list {
   padding-left: 0;
+  margin: 0;
 }
 
 .site-list {
@@ -64,6 +116,7 @@
 
 .site-list__link {
   text-decoration: @text-decoration;
+  cursor: pointer;
 }
 
 @media (min-width: @tablet-width) {
@@ -73,7 +126,7 @@
     align-items: center;
     justify-content: space-between;
 
-    width: 678px;
+    width: 708px;
     margin: 0 auto;
   }
 
@@ -89,11 +142,12 @@
     width: 173px;
   }
 
-  .main-nav__open {
+  .main-nav__button {
     display: none;
   }
 
-  .site-list {
+  .main-nav--closed .site-list,
+  .main-nav--opened .site-list {
     display: flex;
     flex-direction: row;
 
@@ -118,12 +172,17 @@
   .site-list__item:last-child {
     margin-right: 0;
   }
+
+  .site-list__item--current .site-list__link {
+    border-bottom: 2px solid #68b738;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .page-header {
     width: 1220px;
     margin: 0 auto;
+    background-color: transparent;
   }
 
   .page-header__logo {
@@ -134,5 +193,13 @@
   .site-list__item {
     font-size: 20px;
     line-height: 1.24;
+  }
+
+  .site-list--index .site-list__item--current .site-list__link {
+    border-color: #ffffff;
+  }
+
+  .site-list--index .site-list__link {
+    color: @font-color-white;
   }
 }
