--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -1,22 +1,28 @@
-.program {
-  max-width: 280px;
-  margin: 0 auto;
-}
-
 .program__title {
+  width: 280px;
+
   font-family: @main-font;
   font-size: 36px;
   line-height: 1.67;
   font-weight: 400;
   color: @font-color-black;
+
+  padding: 0 20px;
 }
 
 .program__description {
+  width: 280px;
+
   font-family: @main-font;
   font-size: 14px;
   line-height: 1.3;
   text-transform: @text-transform;
   color: @font-color-black;
+
+  padding: 0 20px;
+
+  margin-top: 0;
+  margin-bottom: 39px;
 }
 
 .program__section {
@@ -25,17 +31,24 @@
   margin: 0;
 }
 
-.owner-info__title,
-.about-cat__title,
-.additional-filter__title {
-  .legend-config();
-}
-
 .cat-info__list,
 .cat-info__filter,
 .owner-info__list,
 .additional-filter__list {
   .ul-config();
+  width: 280px;
+  padding: 0 20px;
+}
+
+.cat-info__list {
+  border-bottom: @border;
+}
+
+.cat-info__item,
+.owner-info__item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .cat-info__label,
@@ -46,23 +59,273 @@
 
 .cat-info__input,
 .owner-info__input {
+  position: relative;
+
   font-family: @main-font;
   font-size: 16px;
   line-height: 1.15;
   text-transform: uppercase;
   color: @font-color-grey;
+
   padding-top: 14px;
   padding-bottom: 15px;
   padding-left: 15px;
+
   border: @border;
+
+  margin-bottom: 14px;
+}
+
+.cat-info__item:first-child .cat-info__input {
+  width: 212px;
+}
+
+.cat-info__item:nth-child(2) .cat-info__input {
+  width: 187px;
+}
+
+.cat-info__item:nth-child(3) .cat-info__input {
+  width: 155px;
+}
+
+.cat-info__item:last-child {
+  margin-bottom: 23px;
+}
+
+.cat-info__filter {
+  border-bottom: @border;
+
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.cat-info__filter-item {
+  margin-bottom: 20px;
+}
+
+.cat-info__radio {
+  opacity: 0;
+}
+
+.cat-info__label--filter {
+  position: relative;
+  margin-left: 25px;
+}
+
+.cat-info__label--filter::before {
+  content: "";
+
+  position: absolute;
+  top: 8px;
+  left: -46px;
+
+  width: 29px;
+  height: 29px;
+
+  border: @border;
+  border-radius: 100%;
+}
+
+.cat-info__label--filter::after {
+  display: none;
+
+  content: "";
+  position: absolute;
+  top: 17px;
+  left: -37px;
+
+  width: 12px;
+  height: 12px;
+
+  background-color: @bg-color-green;
+
+  border-radius: 100%;
+}
+
+.cat-info__radio:checked + .cat-info__label--filter::after {
+  display: block;
+}
+
+.owner-info__title,
+.about-cat__title,
+.additional-filter__title {
+  .legend-config();
+  width: 280px;
+  padding: 0 20px;
+}
+
+.owner-info__title {
+  position: relative;
+  margin-bottom: 34px;
+}
+
+.owner-info__title::after {
+  content: "";
+
+  position: absolute;
+  top: 14px;
+  right: 0;
+
+  width: 99px;
+  height: 3px;
+  background-color: @bg-color-green;
+}
+
+.owner-info__list {
+  margin-bottom: 16px;
+}
+
+.owner-info__item:first-child .owner-info__input {
+  width: 202px;
+}
+
+.owner-info__item:nth-child(2) .owner-info__input {
+  width: 187px;
+}
+
+.owner-info__label {
+  position: relative;
+}
+
+.owner-info__item:first-child .owner-info__label::after {
+  content: "";
+  position: absolute;
+  top: 19px;
+  left: 247px;
+  z-index: 2;
+
+  width: 17px;
+  height: 13px;
+
+  background-image: url("/img/icon-mail.svg");
+  background-repeat: no-repeat;
+  background-size: 17px 13px;
+  background-position: center;
+}
+
+.owner-info__item:nth-child(2) .owner-info__label::after {
+  content: "";
+  position: absolute;
+  top: 17px;
+  left: 247px;
+  z-index: 2;
+
+  width: 20px;
+  height: 20px;
+
+  background-image: url("/img/icon-phone.svg");
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  background-position: center;
+}
+
+.about-cat {
+  width: 280px;
+  padding: 0 20px;
+  margin-bottom: 30px;
+}
+
+.about-cat__title {
+  position: relative;
+  padding: 0;
+  margin-bottom: 36px;
+}
+
+.about-cat__title::after {
+  content: "";
+
+  position: absolute;
+  top: 14px;
+  right: -20px;
+
+  width: 158px;
+  height: 3px;
+  background-color: @bg-color-green;
 }
 
 .about-cat__text {
+  width: 274px;
+
   font-family: @main-font;
   font-size: 16px;
   line-height: 1.15;
   text-transform: @text-transform;
   color: @font-color-grey;
+}
+
+.additional-filter__title {
+  position: relative;
+  padding: 0;
+  padding-left: 20px;
+  margin-bottom: 40px;
+}
+
+.additional-filter__title::after {
+  content: "";
+
+  position: absolute;
+  top: 14px;
+  right: -40px;
+
+  width: 136px;
+  height: 3px;
+  background-color: @bg-color-green;
+}
+
+.additional-filter__item {
+  margin-bottom: 20px;
+}
+
+.additional-filter__item:last-child {
+  margin-bottom: 43px;
+}
+
+.additional-filter__checkbox {
+  opacity: 0;
+}
+
+.additional-filter__label {
+  position: relative;
+  margin-left: 25px;
+}
+
+.additional-filter__label::before {
+  content: "";
+
+  position: absolute;
+  top: 10px;
+  left: -46px;
+
+  width: 28px;
+  height: 28px;
+
+  border: @border;
+}
+
+.additional-filter__label::after {
+  content: "";
+  display: none;
+
+  position: absolute;
+  top: 13px;
+  left: -41px;
+
+  width: 20px;
+  height: 12px;
+
+  transform: rotate(-45deg);
+
+  border-bottom: 2px solid #68b738;
+  border-left: 2px solid #68b738;
+}
+
+.additional-filter__checkbox:checked + .additional-filter__label::after {
+  display: block;
+}
+
+.program__other {
+  width: 280px;
+  margin: 0 auto;
 }
 
 .program__button {
@@ -84,7 +347,11 @@
   font-family: @additional-font;
   font-size: 14px;
   line-height: 1.15;
+  text-align: center;
   color: @font-color-grey;
+
+  margin: 0;
+  margin-top: 23px;
 }
 
 @media (min-width: @tablet-width) {
@@ -94,14 +361,22 @@
   }
 
   .program__title {
+    width: auto;
     font-size: 60px;
     line-height: 1;
+
+    margin-bottom: 60px;
+    padding: 0;
   }
 
   .program__description {
     width: 325px;
     font-size: 20px;
     line-height: 1.5;
+
+    padding: 0;
+
+    margin-bottom: 72px;
     margin-left: 41px;
   }
 
@@ -118,11 +393,10 @@
     margin-left: 41px;
   }
 
-  .cat-info__filter {
-    width: 628px;
-    height: 194px;
-    border: @border;
-    margin-left: 41px;
+  .cat-info__list {
+    width: 630px;
+    padding: 0;
+    border: none;
   }
 
   .cat-info__label,
@@ -130,6 +404,12 @@
   .additional-filter__label {
     font-size: 20px;
     line-height: 1;
+  }
+
+  .cat-info__label {
+    height: 20px;
+    padding-top: 21px;
+    padding-bottom: 21px;
   }
 
   .cat-info__input,
@@ -142,6 +422,155 @@
     padding-left: 19px;
 
     margin-left: 15px;
+    margin-bottom: 20px;
+  }
+
+  .cat-info__item:first-child .cat-info__input {
+    width: 546px;
+  }
+
+  .cat-info__item:nth-child(2) .cat-info__input {
+    width: 515px;
+  }
+
+  .cat-info__item:nth-child(3) .cat-info__input {
+    width: 476px;
+  }
+
+  .cat-info__item:last-child {
+    margin-bottom: 52px;
+  }
+
+  .cat-info__filter {
+    width: 562px;
+    height: 159px;
+
+    padding: 0;
+    padding-top: 35px;
+    padding-left: 66px;
+
+    border: @border;
+
+    margin-bottom: 75px;
+    margin-left: 41px;
+  }
+
+  .cat-info__filter-item {
+    margin-bottom: 30px;
+  }
+
+  .cat-info__label--filter {
+    margin: 0;
+  }
+
+  .cat-info__label--filter::before {
+    top: 8px;
+    left: -60px;
+
+    width: 38px;
+    height: 38px;
+  }
+
+  .cat-info__label--filter::after {
+    top: 19px;
+    left: -49px;
+
+    width: 18px;
+    height: 18px;
+  }
+
+  .owner-info__title {
+    width: 667px;
+
+    padding: 0;
+    padding-left: 41px;
+
+    margin-bottom: 78px;
+  }
+
+  .owner-info__title::before {
+    content: "";
+
+    position: absolute;
+    top: 22px;
+    left: -30px;
+
+    width: 30px;
+    height: 3px;
+
+    background-color: #68b738;
+  }
+
+  .owner-info__title::after {
+    top: 22px;
+    right: -30px;
+
+    width: 145px;
+    height: 3px;
+  }
+
+  .owner-info__list {
+    width: 632px;
+    padding: 0;
+    margin-bottom: 48px;
+  }
+
+  .owner-info__item:first-child .owner-info__input {
+    width: 530px;
+  }
+
+  .owner-info__item:nth-child(2) .owner-info__input {
+    width: 514px;
+  }
+
+  .owner-info__label {
+    height: 20px;
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+
+  .owner-info__item:first-child .owner-info__label::after {
+    top: 26px;
+    left: 593px;
+  }
+
+  .owner-info__item:nth-child(2) .owner-info__label::after {
+    top: 23px;
+    left: 593px;
+  }
+
+  .about-cat {
+    padding: 0;
+  }
+
+  .about-cat__title {
+    width: 667px;
+
+    padding: 0;
+    padding-left: 41px;
+
+    margin-bottom: 78px;
+  }
+
+  .about-cat__title::before {
+    content: "";
+
+    position: absolute;
+    top: 22px;
+    left: -30px;
+
+    width: 30px;
+    height: 3px;
+
+    background-color: #68b738;
+  }
+
+  .about-cat__title::after {
+    top: 22px;
+    right: -30px;
+
+    width: 479px;
+    height: 3px;
   }
 
   .about-cat__text {
@@ -152,20 +581,67 @@
     margin-left: 41px;
   }
 
+  .additional-filter__title {
+    width: 667px;
+
+    padding: 0;
+    padding-left: 41px;
+
+    margin-bottom: 70px;
+  }
+
+  .additional-filter__title::before {
+    content: "";
+
+    position: absolute;
+    top: 22px;
+    left: -30px;
+
+    width: 30px;
+    height: 3px;
+
+    background-color: #68b738;
+  }
+
+  .additional-filter__title::after {
+    top: 22px;
+    right: -30px;
+
+    width: 446px;
+    height: 3px;
+  }
+
   .additional-filter__list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
+
     width: 535px;
+
+    padding: 0;
   }
 
   .additional-filter__item {
+    text-align: left;
     margin-right: 60px;
+    margin-bottom: 50px;
+  }
+
+  .additional-filter__item:nth-child(2n) {
+    margin-right: 0;
+  }
+
+  .additional-filter__item:nth-child(4) {
+    margin-right: 38px;
   }
 
   .program__other {
     display: flex;
     flex-direction: row;
+    width: 708px;
+    margin-top: 15px;
+    margin-bottom: 42px;
     margin-left: 41px;
   }
 
@@ -208,8 +684,45 @@
     justify-content: space-between;
   }
 
+  .cat-info__label {
+    height: 20px;
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+
+  .cat-info__input {
+    margin-left: 0;
+  }
+
+  .cat-info__item:first-child .cat-info__input {
+    width: 485px;
+  }
+
+  .cat-info__item:nth-child(2) .cat-info__input {
+    width: 454px;
+  }
+
+  .cat-info__item:nth-child(3) .cat-info__input {
+    width: 415px;
+  }
+
   .cat-info__filter {
-    width: 568px;
+    width: 481px;
+    height: 194px;
+
+    margin-top: 0;
+  }
+
+  .cat-info__filter-item {
+    margin-bottom: 36px;
+  }
+
+  .cat-info__label--filter::before {
+    top: 14px;
+  }
+
+  .cat-info__label--filter::after {
+    top: 25px;
   }
 
   .cat-info__list,
@@ -218,17 +731,75 @@
     margin-left: 0;
   }
 
+  .owner-info__title {
+    width: 1220px;
+    padding-left: 0;
+  }
+
+  .owner-info__title::before {
+    left: -110px;
+
+    width: 70px;
+    height: 3px;
+  }
+
+  .owner-info__title::after {
+    right: -110px;
+
+    width: 777px;
+    height: 3px;
+  }
+
   .owner-info__list {
     display: flex;
     flex-direction: row;
+  }
+
+  .owner-info__item {
+    width: 570px;
   }
 
   .owner-info__item:first-child {
     margin-right: 80px;
   }
 
+  .owner-info__item:first-child .owner-info__input {
+    width: 465px;
+  }
+
+  .owner-info__item:nth-child(2) .owner-info__input {
+    width: 451px;
+  }
+
+  .owner-info__label {
+    width: 84px;
+  }
+
+  .owner-info__item:first-child .owner-info__label::after {
+    left: 530px;
+  }
+
+  .owner-info__item:nth-child(2) .owner-info__label::after {
+    left: 530px;
+  }
+
   .about-cat__title {
-    margin-bottom: 75px;
+    width: 1220px;
+    padding-left: 0;
+  }
+
+  .about-cat__title::before {
+    left: -110px;
+
+    width: 70px;
+    height: 3px;
+  }
+
+  .about-cat__title::after {
+    right: -110px;
+
+    width: 1111px;
+    height: 3px;
   }
 
   .about-cat__text {
@@ -236,15 +807,31 @@
     margin-left: 0;
   }
 
-  .additional-filter__list {
+  .additional-filter__title {
     width: 1220px;
+    padding-left: 0;
   }
 
-  .additional-filter__item {
-    margin-right: 80px;
+  .additional-filter__title::before {
+    left: -110px;
+
+    width: 70px;
+    height: 3px;
+  }
+
+  .additional-filter__title::after {
+    right: -110px;
+
+    width: 1078px;
+    height: 3px;
+  }
+
+  .additional-filter__list {
+    width: 1123px;
   }
 
   .program__other {
+    width: 1220px;
     margin-left: 0;
   }
 
