--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -132,12 +132,16 @@
   list-style: @list-style;
 
   padding: 0;
+  margin: 0;
 }
 
 .program-labels() {
+  height: 19px;
   font-family: @main-font;
   font-size: 16px;
   line-height: 1.15;
   text-transform: @text-transform;
   color: @font-color-black;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
